# agent-batch-harness

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.in  PUBLICATION_POLICY.md  README.ko.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
agents/: parent-orchestrator.md  reviewer.md  shard-worker.md
docs/: dependency-policy.md  design.md  platforms.md  readiness.md  recipes.md  release.md  security-audit.md  workflow.md
examples/code-migration/: README.md  items.tsv  prompt-template.md
examples/code-migration/inputs/: legacy_math.py
examples/tiny-edit/: items.tsv  prompt-template.md
examples/tiny-edit/_batches/: manifest.tsv  shard_001.prompt.md  shard_002.prompt.md
examples/tiny-edit/inputs/: alpha.txt  beta.txt  gamma.txt
examples/tiny-edit/outputs/: alpha.md  beta.md  gamma.md
examples/tiny-edit/qc/: alpha.json  beta.json  gamma.json
harness/: README.md
skills/generic-shard/: SKILL.md
src/agent_batch_harness/: __init__.py  cli.py  core.py
src/shardflow/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_concurrency.py  test_core.py  test_validation.py
tools/: check_artifact.py  generate_sbom.py  release_check.py
wiki/: Getting-Started.md  Home.md  Manifest-and-Status.md  Recovery-and-Concurrency.md  Runners-and-Verification.md  Troubleshooting.md  _Sidebar.md
