[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shardflow"
version = "0.1.0"
description = "A small harness for sharded, resumable agent workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shardflow contributors" }]
keywords = ["agents", "shards", "workflow", "automation", "codex"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
]

[project.scripts]
shardflow = "shardflow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/shardflow/agents" = ["agents/*.md"]
"share/shardflow/skills/generic-shard" = ["skills/generic-shard/SKILL.md"]
"share/shardflow/docs" = ["docs/*.md"]
